# test_project

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  tasks.json
src/: app.py  pyproject.toml
src/test_project/: app.py  cli.py  main.py  service.py  storage.py
src/test_project.egg-info/: PKG-INFO  SOURCES.txt
src/tests/tests/: .gitignore  README.md  test_app.py
tests/: test_service.py  test_storage.py
tests/tests/: test_storage.py
